# rust-squirrel

./: Cargo.toml  LICENSE
examples/: simple.rs
squirrel/: build.rs  helper.cpp
src/: ffi.rs  lib.rs
