[package]
name = "rust-squirrel"
version = "0.0.1"
authors = ["Niklas Voss <niklas.voss@gmail.com>"]
build = "squirrel/build.rs"
links = "squirrel"
description = "FFI for squirrel..."
license = "MIT"
repository = "https://github.com/trevex/rust-squirrel"

[dependencies.rust-bindgen]
git = "https://github.com/trevex/rust-bindgen.git"

[build-dependencies]
gcc = "*"
